# xerus-workspace

./: .gitignore  .gitmodules  .mcp.json  CLAUDE.md  README.md
.claude/: settings.json
.claude/agents/: data-analytics-reporter.md  executive-summary-generator.md  workspace-sync.md
.claude/commands/: handoff.md  shift.md  standup.md  status.md
.claude/rules/: DELEGATION_POLICY.md  ROLE_CAPABILITIES.md  TOOL_AUTHORIZATION.md  TOOL_GUIDE.md
.claude/skills/: skill-rules.json
.memory/: index.md
.memory/company/: decisions.md  vision.md
.memory/entities/: TEMPLATES.md
.memory/user/: context.md  decisions.md
.xerus/: manifest.yaml  version.json
.xerus/ipc/: __init__.py  __main__.py  claude_ipc_server.py  pyproject.toml
.xerus/runner/: db.ts  index.ts  mcp-server.js  package.json  scheduler.ts  session-manager.ts  sync-agents-md.py
.xerus/templates/: scaffold.json
agents/: index.json
agents/xerus-cto/: config.json
agents/xerus-master/: BOOTSTRAP.md  CLAUDE.md  HEARTBEAT.md  OPERATING.md  RELATIONSHIPS.md  SOUL.md  USER.md  agent.md  config.json  system-prompt.md
data/: schema.sql  workspace-schema.sql
data/extensions/: marketing.sql
data/migrations/: 001-conversations-set-null.sql
docs/plans/: 2026-03-16-feat-task-driven-agent-execution-plan.md  2026-03-29-workspace-architecture-v2.md  2026-03-30-complete-workspace-flow.md  2026-03-30-perfect-workspace-architecture.md
drive/: company.md  welcome.md
shared/knowledge/: TOOL_GUIDE.md  company.md
tests/: conftest.py  test_hook_agent_identity.py  test_workspace_structure.py
(+119 files in other folders)
