[project]
name = "xerus-ipc"
version = "1.0.0"
description = "Inter-Process Communication MCP server for Xerus AI workforce"
requires-python = ">=3.12"
dependencies = ["mcp"]

[project.scripts]
xerus-ipc = "claude_ipc_server:main"

[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"
